# dynlib

./: .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md
include/dynlib/: dynlib.h
src/: dynlib.cpp
tests/: CMakeLists.txt  lib.cpp  main.cpp
